[router] Various perf-related cleanups
Removed lots of object allocation and string parsing from the router's
hot path.

Venice changes:

- ResourceAssignment::getPartitionAssignment does 1 fewer map lookup.
  Called at least once per request.

- Partition now carries two extra EnumMap instances, which are faster
  than the previous String-keyed map and also pre-populates the results
  of ready instances and working instances. Previously, there were lots
  of hot path collection instantiation in these functions.

- PartitionAssignment now carries an extra array to do lookups faster
  than with the Integer-keyed map.

- VenicePartitionFinder improvements:
  - Added findPartitionNumber to get the partition for a key without
    string parsing.
  - Also made findPartitioner public so that it can be looked up once
    per multi-key request, rather than once per key.

- Removed the partitionNames set from KeyPartitionSet, which was only
  used for error logging.

- VeniceDelegateMode improvements:
  - getHelixGroupNum and getAssignedHelixGroupId don't use Optionals
    anymore.
  - ScatterGatherModeForMultiKeyRequest now reuses an ArrayList of
    ArrayLists when grouping keys by partitions, rather than a throwaway
    map of LinkedLists.

- Adopted Fast-Avro everywhere in the router.

- VenicePath improvements:
  - Removed the keyIdxToRouterKey map from VenicePath, which is dead code
    since the router cache days. This map was getting populated with every
    key of each request, needlessly.
  - Removed string parsing of resource names from the VenicePath.
  - Removed Optional wrapping of the chunkedResponse, responseDecompressor
    and body.

- VeniceChunkedResponse::write now does not synchronize every time.

Alpini changes:

- Removed Optionals from Headers. Also removed unused functions getAsDate,
  getAsInt, getAsLong.

- Removed IOUtils::getFilterInputStreamIn (and the RateLimitedStream that
  uses it) since it is blocking JDK17 and is not used by Venice.

- Ad